--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </section>
-            <div class="parallax" data-img="assets/img/header-3.jpg"></div>
+            <div class="parallax" data-img="assets/img/header-6.jpeg"></div>
             <section class="contained contained-by-padding" id="geschichte">
                 <h2>Handlung</h2>
                 <div class="row">
@@ -121,7 +121,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h3>Vorgeschichte</h3>
-                                <p class="dropcap">Lorem ipsum dolor sit amet.</p><br><br>
+                                <p class="dropcap">Dr. Strange ist zu Beginn ein erfolgreicher Neurochirurg am New Yorker Metro-General Hospital, er lebt bei und arbeitet mit seiner Freundin, Christine Palmer. Seine Händer erleiden in Folge eines Unfalls jedoch schwerwiegende Nervenschäden, was Christine Palmer ihm offenbart.</p><br><br>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h3>Handlung</h3>
-                                <p class="dropcap">Lorem ipsum dolor sit amet.</p>
+                                <p class="dropcap">In Nepal ermordet Kaecilius einen Wächter einer Bibliothek und stehlen Seiten aus einem verbotenen Buch. Die Älteste versucht, sie aufzuhalten, vierliert sie aber, nachdem sie durch ein Portal nach London geflohen sind. Nachdem Stephen Strange wegen eines Autounfalls beschädigte Nerven in den Händen hat, wendet er all seine Ersparnisse auf, um diese zu heilen und seinen Beruf als Neurochirurg fortzusetzen.<br>Hinterher erfährt er durch einen Patienten von einem Wunderheiler, der seine Querschnittslähmung heilte. Mit seinem letzten Geld begibt er sich nach Kathmandu und wird nach längerer Suche von Mordo zur Ältesten gebracht. Diese offenbart ihm während sie ihn durch mehrere Portale schleudert, dass Pagborn, der Patient, einst ihr Schüler war und den Ort verließ, nachdem seine Lähmung durch Zauberkunst geheilt wurde. Obwohl sie ihn zuerst abweisen will, überzeugt Mordo sie, ihn aufzunehmen. Nachdem er die Zauberkunst begonnen hat, legt er aus Ehrgeiz das Auge von Agamotto, einen mystischen Gegenstand, an und versucht sich an Zeitritualen. Doch Mordo kommt hinzu und erklärt ihm, wie gefährlich diese sind, und, dass diese Manipulationen der Naturgesetze hervorrufen können.<br>Anschließend erfährt er, dass die Zauberer die Welt von Tempeln in New York, Hong Kong und London bewahren müssen. Die gestohlenen Buchseiten enthalten ein Ritual, mit dem Dormamu, ein Wesen aus einer finsteren Dimension, zur Erde gelangen kann und eine Verbindung zwischen den Dimensionen hergestellt wird.<br>
+                                Danach wird der New Yorker Tempel von Kaecilius vernichtet, Strange wird von ihm nach London geschleudert und erfährt, dass das Ziel von Kaecilius ist, durch die Abwesenheit von Zeit die ganze Welt unsterblich zu machen. Außerdem bezieht die Älteste Kraft von Dormamu, um jung zu bleiben.<br>Nachdem er von Kaecilius' Schülern stark verletzt wurde, geht er zurück zu seiner Freundin, Christine Palmer, wonach er wiederum zurück zum Tempel kommt. Dort angekommen, stellt er die Älteste zur Rede.<br>Kaecilius startet einen neuen Angriff, die Älteste wird tödlich verwundet, Strange versucht, sie in Astralform zu retten, sie sagt ihm aber nur, dass er die Regeln brechen muss, um Dormamus Dimension von der Ihrigen zu trennen - danach stirbt sie.<br>Mordo und Strange begeben sich nach Hong Kong, doch der Tempel dort wurde schon zerstört und die dunkle Dimension breitet sich schon aus. Strange benutzt den verbotenen Zauber um Dormamu aufzuhalten, Kaecilius stoppt ihn jedoch. Er geht auf die andere Seite und hält Dormamu in einer Zeitschleife fest; er besiegt ihn, Dormamu, Kaecilius und seine Schüler werden eingesogen. Mordo geht ab, Strange wird zum obersten Wächter der Erde.</p>
                             </div>
                         </div>
                     </div>
@@ -140,12 +141,10 @@
                             <div class="card-body">
                                 <h3>Ausgangslage</h3>
                                 <ul>
-                                    <li>Some Fact</li>
-                                    <li>Some Fact</li>
-                                    <li>Some Fact</li>
-                                    <li>Some Fact</li>
-                                    <li>Some Fact</li>
-                                    <li>Some Fact</li>
+                                    <li><b>Strange</b> besiegt <i>Kaecilius</i></li>
+                                    <li><b>Kaecilius</b> wird mitsamt seiner Schüler in die dunkle Dimension gesogen</li>
+                                    <li><b>Mordo</b> verlässt den Orden</li>
+                                    <li><b>Strange</b> trägt nun seinen Levitationsumhang und das Auge von Aggamotto, er ist nun der <b>Sorcerer Supreme</b>.</li>
                                 </ul>
                             </div>
                         </div>
@@ -157,12 +156,16 @@
                 <h2>Beziehungen</h2>
                 <div class="row">
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg" height="475">
+                        <img src="assets/img/christine.webp" height="475">
                         <div class="card-body">
                             <h3>Christine Palmer</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
-                                <dd class="col-8">?? Jahre</dd>
+                                <dd class="col-8"><i>Unbekannt</i></dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beruf</dt>
+                                <dd class="col-8">Ärztin</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Beziehung</dt>
@@ -170,61 +173,73 @@
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Sonstiges</dt>
-                                <dd class="col-8">…</dd>
+                                <dd class="col-8">-</dd>
                             </dl>
                         </div>
                     </div>
                     <div class="card col-3">
                         <img src="assets/img/mordo.webp" height="475">
                         <div class="card-body">
-                            <h3>Baron Mordo</h3>
+                            <h3>Karl Mordo</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
-                                <dd class="col-8">?? Jahre</dd>
+                                <dd class="col-8"><i>Unbekannt</i></dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beruf</dt>
+                                <dd class="col-8">Zauberer</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Beziehung</dt>
-                                <dd class="col-8">(Ex-)Freundin</dd>
+                                <dd class="col-8">Freund</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Sonstiges</dt>
-                                <dd class="col-8">…</dd>
+                                <dd class="col-8">Mordo verlässt gegen Ende den Orden.</dd>
                             </dl>
                         </div>
                     </div>
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg" height="475">
+                        <img src="assets/img/ancient_one.webp" height="475">
                         <div class="card-body">
                             <h3>Die Älteste</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
-                                <dd class="col-8">?? Jahre</dd>
+                                <dd class="col-8"><i>Unbekannt</i></dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beruf</dt>
+                                <dd class="col-8">Zauberin</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Beziehung</dt>
-                                <dd class="col-8">Freundin</dd>
+                                <dd class="col-8">Mentorin</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Sonstiges</dt>
-                                <dd class="col-8">…</dd>
+                                <dd class="col-8">-</dd>
                             </dl>
                         </div>
                     </div>
                     <div class="card col-3">
-                        <img src="assets/img/palmer.jpeg" height="475">
+                        <img src="assets/img/kaecilius.webp" height="475">
                         <div class="card-body">
-                            <h3>???</h3>
+                            <h3>Kaecilius</h3>
                             <dl class="row">
                                 <dt class="col-4">Alter</dt>
-                                <dd class="col-8">?? Jahre</dd>
+                                <dd class="col-8"><i>Unbekannt</i></dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-4">Beruf</dt>
+                                <dd class="col-8">Zauberer</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Beziehung</dt>
-                                <dd class="col-8">Freundin</dd>
+                                <dd class="col-8">Opponent</dd>
                             </dl>
                             <dl class="row">
                                 <dt class="col-4">Sonstiges</dt>
-                                <dd class="col-8">…</dd>
+                                <dd class="col-8">Enttäuscht von der Ältesten.</dd>
                             </dl>
                         </div>
                     </div>
@@ -235,32 +250,16 @@
                 <h2>Videos</h2>
                 <div class="row">
                     <div class="card col-6" style="min-height: 400px;">
-                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds">
-                        </iframe>
+                        <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds"></iframe>
                     </div>
                     <div class="card col-6" style="min-height: 400px;">
-                        <iframe class="yt" src="https://www.youtube.com/embed/M9fFPLrO3RU">
-                        </iframe>
+                        <iframe class="yt" src="https://www.youtube.com/embed/M9fFPLrO3RU"></iframe>
                     </div>
                     <div class="card col-6" style="min-height: 400px;">
-                        <iframe class="yt" src="https://www.youtube.com/embed/KpaHWMqAM0Y">
-                        </iframe>
+                        <iframe class="yt" src="https://www.youtube.com/embed/KpaHWMqAM0Y"></iframe>
                     </div>
                     <div class="card col-6" style="min-height: 400px;">
-                        <iframe class="yt" src="https://www.youtube.com/embed/gYocQtMomFs">
-                        </iframe>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="card col-12">
-                        <h3>Trivia</h3>
-                        <ul>
-                            <li>Dr. Strange wurde von Steve Ditko und Stan Lee erdacht und hatte seinen ersten Auftritt in Strange Tales #110 aus dem Jahre 1963.</li>
-                            <li>Für den Charakter des Dr. Strange ließ sich Steve Ditko von dem Radio Serial "Chandu The Magician" inspirieren.</li>
-                            <li>Dr. Strange wurde bereits in The Return of the First Avenger von Jasper Sitwell erwähnt. Damit ist er der erste Superheld des Marvel Cinematic Universes, der schon vor seinem ersten tatsächlichen Auftritt namentlich erwähnt wurde.</li>
-                            <li>Auch wurde er in Spider-Man 2 als Jamerson einen neuen namen für Dr. Otto Octavius will erwähnt, Hoffman bietet den Namen Doctor Strange an, zwar findet sein Chef den Namen gut, meint aber, dass es den schon gibt.</li>
-                            <li>In den Comics hat Dr. Strange eine Geliebte, ihr Name ist Clea.</li>
-                        </ul>
+                        <iframe class="yt" src="https://www.youtube.com/embed/gYocQtMomFs"></iframe>
                     </div>
                 </div>
             </section>
