--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     <li><b>Strange</b> besiegt <i>Kaecilius</i></li>
                                     <li><b>Kaecilius</b> wird mitsamt seiner Schüler in die dunkle Dimension gesogen</li>
                                     <li><b>Mordo</b> verlässt den Orden</li>
-                                    <li><b>Strange</b> trägt nun seinen Levitationsumhang und das Auge von Aggamotto, er ist nun der <b>Sorcerer Supreme</b>.</li>
+                                    <li><b>Strange</b> trägt nun seinen Levitationsumhang und das Auge von Agamotto, er ist nun der <b>Sorcerer Supreme</b>.</li>
                                 </ul>
                             </div>
                         </div>
