--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <a id="content">
-            <div class="parallax" data-img="assets/img/header-1.jpg"></div>
+            <div class="parallax" data-img="assets/img/header-7.webp"></div>
             <section class="contained contained-by-padding" id="person">
                 <h2>Personendaten</h2>
                 <div class="row equal-height">
@@ -63,10 +63,10 @@
                             <div class="card-body">
                                 <h3>Trivia</h3>
                                 <ul>
-                                    <li>Dr. Strange wurde von Steve Ditko und Stan Lee erdacht und hatte seinen ersten Auftritt in Strange Tales #110 aus dem Jahre 1963.</li>
-                                    <li>Für den Charakter des Dr. Strange ließ sich Steve Ditko von dem Radio Serial "Chandu The Magician" inspirieren.</li>
-                                    <li>Dr. Strange wurde bereits in The Return of the First Avenger von Jasper Sitwell erwähnt. Damit ist er der erste Superheld des Marvel Cinematic Universes, der schon vor seinem ersten tatsächlichen Auftritt namentlich erwähnt wurde.</li>
-                                    <li>Auch wurde er in Spider-Man 2 als Jamerson einen neuen namen für Dr. Otto Octavius will erwähnt, Hoffman bietet den Namen Doctor Strange an, zwar findet sein Chef den Namen gut, meint aber, dass es den schon gibt.</li>
+                                    <li>Dr. Strange wurde von <i>Steve Ditko</i> und <i>Stan Lee</i> erdacht und hatte seinen ersten Auftritt in <i>Strange Tales #110</i> aus dem Jahre 1963.</li>
+                                    <li>Für den Charakter des Dr. Strange ließ sich <i>Steve Ditko</i> von dem Radio Serial <i>"Chandu The Magician"</i> inspirieren.</li>
+                                    <li>Dr. Strange wurde bereits in <i>The Return of the First Avenger</i> von <i>Jasper Sitwell</i> erwähnt. Damit ist er der erste Superheld des Marvel Cinematic Universes, der schon vor seinem ersten tatsächlichen Auftritt namentlich erwähnt wurde.</li>
+                                    <li>Auch wurde er in <i>Spider-Man 2</i> als Jamerson einen neuen Namen für Dr. Otto Octavius will erwähnt, Hoffman bietet den Namen <i>Doctor Strange</i> an, zwar findet sein Chef den Namen gut, meint aber, dass es den schon gibt.</li>
                                     <li>In den Comics hat Dr. Strange eine Geliebte, ihr Name ist Clea.</li>
                                 </ul>
                             </div>
@@ -249,16 +249,16 @@
             <section class="contained contained-by-padding" id="videos">
                 <h2>Videos</h2>
                 <div class="row">
-                    <div class="card col-6" style="min-height: 400px;">
+                    <div class="card col-6" style="min-height: 400px; height: 100%;">
                         <iframe class="yt" src="https://www.youtube.com/embed/s-K1lQsIYds"></iframe>
                     </div>
-                    <div class="card col-6" style="min-height: 400px;">
+                    <div class="card col-6" style="min-height: 400px; height: 100%;">
                         <iframe class="yt" src="https://www.youtube.com/embed/M9fFPLrO3RU"></iframe>
                     </div>
-                    <div class="card col-6" style="min-height: 400px;">
+                    <div class="card col-6" style="min-height: 400px; height: 100%;">
                         <iframe class="yt" src="https://www.youtube.com/embed/KpaHWMqAM0Y"></iframe>
                     </div>
-                    <div class="card col-6" style="min-height: 400px;">
+                    <div class="card col-6" style="min-height: 400px; height: 100%;">
                         <iframe class="yt" src="https://www.youtube.com/embed/gYocQtMomFs"></iframe>
                     </div>
                 </div>
