--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
         <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
         <title>Dr. Strange</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="node_modules/rellax/rellax.min.js"></script>
-        <script type="text/javascript" src="js/drstrange.js"></script>
         <script defer src="node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"></script>
     </head>
-    <body class="no-scroll">
-        <div class="jumbotron" id="opener">
-            <div class="parallax" data-img="assets/img/header-2.jpg"></div>
-            <div class="isle dark">
-                <h1>Dr. Strange</h1>
-                <span id="scrolldown"><i class="fas fa-angle-double-down"></i></span>
-            </div>
-        </div>
+    <body>
         <a id="content">
             <div class="parallax" data-img="assets/img/header-7.webp"></div>
             <section class="contained contained-by-padding" id="person">
