--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <a id="content">
-            <div class="parallax" data-img="assets/img/header-7.webp"></div>
+            <div class="parallax" style="background-image: url('assets/img/header-7.webp')"></div>
             <section class="contained contained-by-padding" id="person">
                 <h2>Personendaten</h2>
                 <div class="row equal-height">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </section>
-            <div class="parallax" data-img="assets/img/header-6.jpeg"></div>
+            <div class="parallax" style="background-image: url('assets/img/header-6.jpeg')"></div>
             <section class="contained contained-by-padding" id="geschichte">
                 <h2>Handlung</h2>
                 <div class="row">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </section>
-            <div class="parallax" data-img="assets/img/header-4.jpeg"></div>
+            <div class="parallax" style="background-image: url('assets/img/header-4.jpeg')"></div>
             <section class="contained contained-by-padding" id="beziehungen">
                 <h2>Beziehungen</h2>
                 <div class="row">
@@ -235,7 +235,7 @@
                     </div>
                 </div>
             </section>
-            <div class="parallax" data-img="assets/img/header-5.jpeg"></div>
+            <div class="parallax" style="background-image: url('assets/img/header-5.jpeg')"></div>
             <section class="contained contained-by-padding" id="videos">
                 <h2>Videos</h2>
                 <div class="row">
